# iris-stack

./: .gitignore  AGENTS.md  Cargo.toml  README.md  package.json  playwright.config.ts  pnpm-lock.yaml  stack.json
.github/workflows/: ci.yml  product-lab.yml  vpn-product-lab.yml
docs/: integration-lab.md  iris-stack.md  status-and-testing.md
e2e/: site.spec.ts
scripts/: deploy-worker-assets.mjs  hashtreePaths.mjs  https-static-assets-worker.mjs  portable-smoke.mjs  product-lab.sh  release-site.mjs  test-candidates.sh  vpn-product-lab.sh
site/: index.html  tsconfig.json  vite.config.ts
site/src/: App.svelte  main.ts  styles.css
src/: main.rs
tests/: cashu_payment_product.rs  chat_drive_htree_product.rs  drive_htree_product.rs  portable-build.test.mjs  release-site.test.mjs  same_host_processes.rs  site-contract.test.mjs  stack-contract.test.mjs
tests/support/: process.rs  product.rs
