[package]
name = "iris-stack-lab"
version = "0.1.0"
edition = "2024"
license = "0BSD"
description = "Process-level integration lab for same-host Iris substrate composition"
homepage = "https://git.iris.to/#/npub1xdhnr9mrv47kkrn95k6cwecearydeh8e895990n3acntwvmgk2dsdeeycm/iris-stack"
repository = "https://github.com/irislib/iris-stack"
publish = false

[dependencies]
anyhow = "1"
cashu-credit = "=0.3.0"
cashu-service = { version = "=0.3.1", features = ["simulation"] }
fips-core = "=0.4.1"
hashtree-core = "0.2.84"
hashtree-fips-transport = "=0.4.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["io-util", "io-std", "macros", "net", "process", "rt-multi-thread", "sync", "time"] }
